1)Alteração de eventos 2)Atributo com o conteúdo do arquivo